MODSOURMAN-1340 - Upgrade module to Vert.x 5.0 (#1018)